// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> by default matches with snapshot 1`] = `
<span
  className="k-u-weight-light"
/>
`;

exports[`<Text /> with as prop matches with snapshot 1`] = `
<div
  className="k-u-weight-light"
/>
`;

exports[`<Text /> with cssColor and custom style matches with snapshot 1`] = `
<span
  className="k-u-weight-light"
  style={
    Object {
      "color": "#F00",
      "fontWeight": "bold",
    }
  }
/>
`;

exports[`<Text /> with tag prop matches with snapshot 1`] = `
<div
  className="k-u-weight-light"
/>
`;
